# Sudoku-Solver

./: .gitignore  CMakeLists.txt  ReadMe.md
include/: AlgorithmX.hpp  Sudoku.hpp  util.hpp
puzzles/: puzzle_1.txt  puzzle_16x16.txt  puzzle_4x4.txt
src/: AlgorithmX.cpp  AlgorithmX.inl  AlgorithmX.tpp  Sudoku.cpp  Sudoku.tpp  main.cpp  util.cpp
